# CMakeTest

./: CMakeLists.txt  main.cpp
_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  foo.sln  foo.vcxproj  foo.vcxproj.filters
_builds/Debug/: foo.lib
_builds/foo.dir/Debug/: foo.vcxproj.FileListAbsolute.txt
_builds/foo.dir/Debug/foo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  foo.lastbuildstate
_builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
_builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
_builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
_builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
